--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "bootstrap-material-design": "^4.1.3",
+    "mogoose": "^0.0.1-security",
+    "mongoose": "^7.6.2",
+    "next": "13.5.5",
+    "next-auth": "^4.23.2",
     "react": "^18",
     "react-dom": "^18",
-    "next": "13.5.5"
+    "react-hot-toast": "^2.4.1"
   }
 }
