--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "bootstrap-material-design": "^4.1.3",
-    "mogoose": "^0.0.1-security",
     "mongoose": "^7.6.2",
     "next": "13.5.5",
     "next-auth": "^4.23.2",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
-    "react-quill": "^2.0.0"
+    "react-quill": "^2.0.0",
+    "slugify": "^1.6.6"
   }
 }
