--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mongoose": "^7.6.2",
     "next": "13.5.5",
     "next-auth": "^4.23.2",
+    "query-string": "^8.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
