--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^5.1.1",
     "bootstrap-material-design": "^4.1.3",
     "mongoose": "^7.6.2",
+    "mssql": "^10.0.1",
     "next": "13.5.5",
     "next-auth": "^4.23.2",
     "query-string": "^8.1.0",
