--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "bootstrap-material-design": "^4.1.3",
+    "dayjs": "^1.11.10",
     "mongoose": "^7.6.2",
     "next": "13.5.5",
     "next-auth": "^4.23.2",
