--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "bootstrap-material-design": "^4.1.3",
     "dayjs": "^1.11.10",
     "mongoose": "^7.6.2",
