--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "bootstrap-material-design": "^4.1.3",
+    "crypto": "^1.0.1",
     "dayjs": "^1.11.10",
     "mongoose": "^7.6.2",
     "mssql": "^10.0.1",
@@ -21,6 +22,7 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-quill": "^2.0.0",
+    "sequelize": "^6.33.0",
     "slugify": "^1.6.6"
   }
 }
